solve modernizer error